--- a/DbBackupper/View/RestoreView.xaml
+++ b/DbBackupper/View/RestoreView.xaml
@@ -3,14 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:model="clr-namespace:Swsu.Tools.DbBackupper.Model"
              xmlns:view="clr-namespace:Swsu.Tools.DbBackupper.View"
-             xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-             xmlns:service="clr-namespace:Swsu.Tools.DbBackupper.Service"
              xmlns:properties="clr-namespace:Swsu.Tools.DbBackupper.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="800" Background="AliceBlue">
-
+	
+	<UserControl.Resources>
+		<Style TargetType="{x:Type CheckBox}">
+			<Setter Property="IsEnabled" Value="True"/>
+		</Style>
+	</UserControl.Resources>
+	
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="0.8*"/>
