--- a/DbBackupper/View/WorkflowIndicatorView.xaml
+++ b/DbBackupper/View/WorkflowIndicatorView.xaml
@@ -100,7 +100,7 @@
 
 	<Grid Visibility="{Binding Path=WorkflowType, Converter={StaticResource WorkflowTypeToVisibilityConverter}}" Opacity="1">
 
-<!--		<UserControl Background="Black" Opacity="0.5" />-->
+		<UserControl Background="LightGray" Opacity="0.2" />
 		<dx:WaitIndicator DeferedVisibility="True" FontSize="16" Opacity="1"
 						  Content="{Binding Path=WorkflowType, Converter={StaticResource WorkflowTypeToStringConverter}}" Template="{DynamicResource WaitIndicatorControlTemplate}">
 			<dx:WaitIndicator.ContentTemplate>
